# vala-win32

./: README.md  meson.build
cross-files/: linux-mingw-w64-32bit.txt  linux-mingw-w64-64bit.txt
examples/: meson.build
res/: meson.build
scripts/: run.sh
src/: meson.build
